# chalk

./: Cargo.toml
chalk-integration/: Cargo.toml
chalk-integration/src/: interner.rs
chalk-ir/: Cargo.toml
chalk-ir/src/: cast.rs  debug.rs  interner.rs  lib.rs  zip.rs
chalk-ir/src/fold/: in_place.rs
chalk-recursive/: Cargo.toml
chalk-recursive/src/: fixed_point.rs  fulfill.rs  lib.rs  proof_tree.rs  recursive.rs  solve.rs
chalk-recursive/src/fixed_point/: cache.rs  search_graph.rs  stack.rs
chalk-solve/: Cargo.toml
chalk-solve/src/: infer.rs  lib.rs  solve.rs
chalk-solve/src/infer/: test.rs  unify.rs
chalk-solve/src/solve/: truncate.rs
tests/test/: cycle.rs
