[package]
name = "chalk-recursive"
version = "0.92.0-dev.0"
description = "Tracing Recursive solver for the Chalk project"
license = "MIT OR Apache-2.0"
authors = ["Rust Compiler Team", "Chalk developers"]
repository = "https://github.com/rust-lang/chalk"
readme = "README.md"
keywords = ["compiler", "traits", "prolog"]
edition = "2018"

[dependencies]
rustc-hash = { version = "1.1.0" }
tracing = "0.1"
index_vec = "0.1.3"
fluid-let = "1.0.0"
serde = "=1.0.156"
itertools = "0.11"
ts-rs = { version = "6.2.0" }

chalk-derive = { version = "0.92.0-dev.0", path = "../chalk-derive" }
chalk-ir = { version = "0.92.0-dev.0", path = "../chalk-ir" }
chalk-solve = { version = "0.92.0-dev.0", path = "../chalk-solve", default-features = false }

# TODO put this behind a feature
argus = { version = "0.0.0", path = "../../crates/argus" }

[dev-dependencies]
# chalk-integration = { path = "../chalk-integration" }

[features]
default = ["tracing-full"]

tracing-full = ["chalk-solve/tracing-full"]
