[package]
name = "chalk-solve"
version = "0.92.0-dev.0"
description = "Combines the chalk-engine with chalk-ir"
license = "MIT OR Apache-2.0"
authors = ["Rust Compiler Team", "Chalk developers"]
repository = "https://github.com/rust-lang/chalk"
readme = "README.md"
keywords = ["compiler", "traits", "prolog"]
edition = "2018"

[dependencies]
ena = "0.14.0"
itertools = "0.10.0"
petgraph = "0.5.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter"] }
tracing-tree = { version = "0.2", optional = true }
rustc-hash = { version = "1.1.0" }

chalk-derive = { version = "0.92.0-dev.0", path = "../chalk-derive" }
chalk-ir = { version = "0.92.0-dev.0", path = "../chalk-ir" }
indexmap = "1.8.0"

lazy_static = "1.4.0"

# TODO migrate types to Argus (when you know what you want)
serde = { version = "=1.0.156", features = ["derive"], optional = true }
ts-rs = { version = "6.2.0", optional = true }

[dev-dependencies]
# chalk-integration = { path = "../chalk-integration" }

[features]
default = ["tracing-full", "tserialize"]
tserialize = ["serde", "ts-rs"]
tracing-full = ["tracing-subscriber", "tracing-tree"]
